2002-01-10  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/Date/Date.py: ISO fix.

2002-01-09  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/vfs/zipfs.py, parfs.py: VFS tweaks.

	* SkunkWeb/sample_webdocs/demo/gallery/index.html: added image gallery demo
	(requires Python Imaging Library).

2002-01-09  Andrew Csillag  <drew@localhost.localdomain>

	* configure.in: added check for python development files

2002-01-02  Andrew Csillag  <drew@localhost.localdomain>
	* SkunkWeb/sample_webdocs/demo/geeknews/*many*: fixed so will work
	with Python 2.2 pickling issue

	* README: added note about Python 2.1 to 2.2 upgrade issue

	* pylibs/Date/__init__.py: lagging fix after the *many* change below.

	* SkunkWeb/sample_webdocs/demo/geeknews/dcomps/newsforge.pydcmp: fixed so it works because they changed their xml format

2001-12-26  Andrew Csillag  <drew@localhost.localdomain>

	* docs/stmlrefer/stmlrefer.tex: fixed desc of <:msg:> tag

2001-12-20  Andrew Csillag  <drew@localhost.localdomain>

	* pylibs/DateTime.py: removed

	* SkunkWeb/mod_skunkweb/Makefile.in: fixed share dir permissions

	* *many*: now will work with either old-style DateTime package
	  or with new style mx.DateTime. 

2001-12-18  Andrew Csillag  <drew@localhost.localdomain>

	* pylibs/PyDO/sapdbapi.py: added file contributed by Ulrich Eck

2001-12-18  Andrew Csillag  <drew@localhost.localdomain>

	* pylibs/PyDO/postconn.py: fix from Gregory Brauer for setting string
	  attributes to None

2001-12-18  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/vfs/__init__.py: import vfs.vfs.MultiFS into vfs package namespace	

2001-12-18  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/vfs/vfs.py (MultiFS): sketch of fs that mounts other fs'es, soon to replace the list of fses
	used by AE.

2001-12-14  Andrew Csillag  <drew@localhost.localdomain>

	* pylibs/PyDO/sapdbconn.py, pylibs/PyDO/sapdbgenscript.py, pylibs/PyDO/PyDBI.py: Added SAP database adaptor from Ulrich Eck
