@@ -1,5 +1,6 @@
-<TITLE>Demos</TITLE>
+<html><head><TITLE>Demos</TITLE></head>
+<body><p>Ok, right now we only have two.</p>
+<OL><LI>The <A HREF="geeknews">Geek News</a> page.</LI>
+<LI>The <A HREF="gallery">Image Gallery</A> page.</LI>
+</OL>
 
-Ok, right now we only have one.
-<HR>
-The <A HREF="geeknews">Geek News</a> page.
